# ndotter

./: Cargo.toml  LICENSE  README.md
backend/: Cargo.toml  README.md
backend/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
gui/: Cargo.toml  README.md  run.sh
gui/src/: app.rs  main.rs
gui/src/utils/: mod.rs  traits.rs
gui/src/widgets/: file_select.rs  labelled_spin_button.rs  labelled_switch.rs  mod.rs  notheader.rs  notheading.rs
src/: main.rs
