[package]
name = "ndotter"
version = "1.0.0"
authors = ["Koncepto Sociala"]
description = "Convert bitmaps to N-dot SVG art"
documentation = "https://docs.rs/ndotter"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.3"
open = "5.3.0"
svg = "0.18.0"
