[package]
name = "ndotter_gui"
version = "2.0.0"
authors = ["Koncepto Sociala"]
description = "GUI frontend for ndotter"
license = "MIT"
edition = "2021"

[dependencies]
notrelm = { path = "../../notrelm" }

anyhow = "1.0.89"
ndotter_backend = { path = "../backend"}
gtk = "0.16.1"
relm = "0.24.1"
relm-derive = "0.24.0"
structstruck = "0.4.1"
urlencoding = "2.1.3"
pretty_env_logger = "0.5.0"
log = "0.4.22"
